# coderoll

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
datasets/: preferences.jsonl  rewards.jsonl  rewards_meta.jsonl  sft.jsonl
example/: README.md  generate_eval_sets.py
examples/: README.md  js_add_one.yaml  python_add_one.yaml  ts_add_one.yaml
examples/add_one/: candidates.jsonl  prompt.txt  task.toml  test_solution.py
examples/candidate_dependencies/: candidates.jsonl  experiment.yaml
examples/complex_file_mode/: candidates.jsonl  experiment.yaml
examples/complex_js_file_mode/: candidates.jsonl  experiment.yaml
examples/complex_project_mode/: experiment.yaml
examples/complex_ts_project_mode/: experiment.yaml
examples/directory_candidate/: experiment.yaml
examples/file_mode/: candidates.jsonl  experiment.yaml
examples/js_add_one/: candidates.jsonl  prompt.txt  task.toml  test_solution.test.js
examples/js_file_mode/: candidates.jsonl  (+1 more)
quickStart/: 01_run_config.py  02_rank_results.py  03_view_and_export.py  04_build_config_in_python.py  05_multilang_usage.py  06_sandbox_execution.py  README.md  file_mode_experiment.toml  file_mode_experiment.yaml
reports/: add_one.fixed.html  add_one.html
tests/: test_candidate.py  test_cli_ranking.py  test_config.py  test_exporters.py  test_parsers.py  test_path_safety.py  test_project_file_workspace.py  test_ranker.py  test_result.py  test_run_logging.py  test_runner.py  test_runtimes.py  test_scoring.py  test_simple_exec.py  test_store.py  test_task.py  test_viewer.py  test_workspace.py
(+148 files in other folders)
