[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coderoll"
version = "0.1.0"
description = "Dependency-free local code rollout and pytest evaluation library"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Coderoll Contributors"}
]
keywords = [
  "code-eval",
  "sandbox",
  "pytest",
  "rl-data",
  "code-agents",
  "local-first"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
coderoll = "coderoll.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
coderoll = ["templates/*"]
